force-app/main/default/objects/Resultat_Analyse__c/Resultat_Analyse__c.object-meta.xml
<CustomObject>
    <label>Resultat Analyse</label>
    <nameField>
        <label>Resultat</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resultats Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>