force-app/main/default/objects/Resultat_Analyse__c/fields/pRelated_Visite__c.field-meta.xml
<CustomField>
    <fullName>pRelated_Visite__c</fullName>
    <label>pRelated Visite</label>
    <length>50</length>
    <type>Text</type>
</CustomField>