force-app/main/default/objects/Resultat_Analyse__c/fields/Prescription_Autre__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Autre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescription Autre</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Prescription_Autre__c.Type__c</field>
            <operation>equals</operation>
            <value>Analyse médicale</value>
        </filterItems>
        <infoMessage>Selectionner une analyse prescrite</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Prescription_Autre__c</referenceTo>
    <relationshipLabel>Resultats Analyses</relationshipLabel>
    <relationshipName>Resultats_Analyses</relationshipName>
    <type>Lookup</type>
</CustomField>