force-app/main/default/objects/Resultat_Analyse__c/fields/Related_Visite__c.field-meta.xml
<CustomField>
    <fullName>Related_Visite__c</fullName>
    <formula>Visite__r.Related_Visite__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Visite</label>
    <type>Text</type>
</CustomField>