force-app/main/default/objects/Resultat_Analyse__c/fields/Resultat__c.field-meta.xml
<CustomField>
    <fullName>Resultat__c</fullName>
    <label>Resultat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positif</fullName>
            </value>
            <value>
                <fullName>Négatif</fullName>
            </value>
            <value>
                <fullName>Indecis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>