force-app/main/default/objects/Resultat_Analyse__c/fields/Visite__c.field-meta.xml
<CustomField>
    <fullName>Visite__c</fullName>
    <label>Visite</label>
    <referenceTo>Visite__c</referenceTo>
    <relationshipLabel>Resultats Analyses</relationshipLabel>
    <relationshipName>Resultats_Analyses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>